// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/menu-items/MenuItemList Snapshots Empty 1`] = `
<div
  item-key="uuid"
>
  <div
    class="ui-datatable elevation-1"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Item: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Item
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Cost: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-right"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
              <span>
                
        Cost
      
              </span>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-center"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="4"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="4"
            >
              No matching records found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
   
  <div
    class="layout align-center"
  >
    <div
      class="flex grow justify-center"
    >
      <div
        class="layout justify-center"
      >
        <ul
          class="v-pagination theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </button>
          </li>
          <li>
            <button
              class="v-pagination__item v-pagination__item--active primary"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </button>
          </li>
        </ul>
      </div>
    </div>
     
    <div
      class="flex shrink"
    >
      <div
        class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
        role="combobox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Results Per Page
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  10
                </div>
                <input
                  aria-label="Results Per Page"
                  aria-readonly="false"
                  autocomplete="on"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            >
              <div
                class="v-menu__content theme--light "
                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
              >
                <div
                  class="v-select-list v-card theme--light"
                >
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      class="primary--text"
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            15
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            30
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            50
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemList Snapshots Loading 1`] = `
<div
  item-key="uuid"
>
  <div
    class="ui-datatable elevation-1"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Item: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Item
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Cost: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-right"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
              <span>
                
        Cost
      
              </span>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-center"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="4"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-linear"
                role="progressbar"
                style="height: 10px;"
              >
                <div
                  class="v-progress-linear__background primary"
                  style="height: 10px; opacity: 0.3; width: 100%;"
                />
                <div
                  class="v-progress-linear__bar"
                >
                  <div
                    class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                  >
                    <div
                      class="v-progress-linear__bar__indeterminate long primary"
                    />
                    <div
                      class="v-progress-linear__bar__indeterminate short primary"
                    />
                  </div>
                  <!---->
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="4"
            >
              No matching records found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
   
  <div
    class="layout align-center"
  >
    <div
      class="flex grow justify-center"
    >
      <div
        class="layout justify-center"
      >
        <ul
          class="v-pagination v-pagination--disabled theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </button>
          </li>
          <li>
            <button
              class="v-pagination__item v-pagination__item--active primary"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </button>
          </li>
        </ul>
      </div>
    </div>
     
    <div
      class="flex shrink"
    >
      <div
        class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
        role="combobox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Results Per Page
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  10
                </div>
                <input
                  aria-label="Results Per Page"
                  aria-readonly="false"
                  autocomplete="on"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            >
              <div
                class="v-menu__content theme--light "
                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
              >
                <div
                  class="v-select-list v-card theme--light"
                >
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      class="primary--text"
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            15
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            30
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            50
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/menu-items/MenuItemList Snapshots Populated 1`] = `
<div
  item-key="uuid"
>
  <div
    class="ui-datatable elevation-1"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Item: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Item
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Cost: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-right"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
              <span>
                
        Cost
      
              </span>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-center"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="4"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      nulla
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Alice, 'shall I NEVER get any older than you, and listen to me! I'LL soon make you dry enough!', They all sat down at them, and it'll sit up and picking the daisies, when suddenly a White Rabbit.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $5,807.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      odio
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Hatter. 'He won't stand beating. Now, if you were never even spoke to Time!' 'Perhaps not,', Alice cautiously replied, not feeling at all what had become of it; and while she ran, as well as she went.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $9,558.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      occaecati
    
              </div>
               
              <div
                class="grey--text"
              >
                
      White Rabbit, 'but it seems to be sure! However, everything is to-day! And yesterday thingswent on in the shade: however, the moment she appeared; but she did not feel encouraged to ask help of any.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $1,174.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      qui
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Laughing and Grief, they used to call him Tortoise--' 'Why did they live on?' said Alice,very earnestly. 'I've had nothing yet,' Alice replied very readily: 'but that's because it stays the same.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $7,484.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      doloremque
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Alice)--'and perhaps you were down here with me! There are no mice in the sun. (IF you don't, know of any that do,' Alice said very politely, 'if I had not gone (We know it to her full size by this.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $7,799.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      voluptatum
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Five. 'I heard the King said, for about the reason they're called lessons,' the Gryphon eplied rather impatiently: 'any shrimp could have told you that.' 'If I'd been the whiting,' said Alice, 'we.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $4,823.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      et
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Queen of Hearts were seated on their slates, when the tide rises and sharks are around, His, voice has a timid and tremulous sound.} 'That's different from what I say,' the Mock Turtle went on. 'We.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $9,750.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      sit
    
              </div>
               
              <div
                class="grey--text"
              >
                
      Queen added to one of the hall; but, alas! either the locks were too large, or the key was ying under the sea,' the Gryphon repeated impatiently: 'it begins I passed by his face only, she would.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $3,159.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      quos
    
              </div>
               
              <div
                class="grey--text"
              >
                
      So you see, because some of them even when they met in the other. In the very middle of one!, There ought to be a grin, and she hastily dried her eyes to see the Mock Turtle to sing you a present of.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $6,966.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-left"
            >
              <div
                class="subheading primary--text"
              >
                
      consequatur
    
              </div>
               
              <div
                class="grey--text"
              >
                
      I to get in?' 'There might be some sense in your knocking,' the Footman went on so long that, they were lying round the hall, but they all crowded round her, about the right house, because the.
    
              </div>
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="grey--text"
              >
                
      $8,377.00
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <button
                class="v-btn theme--dark primary primary-text--text"
                type="button"
              >
                <div
                  class="v-btn__content"
                >
                  
                Manage
               
                  <i
                    aria-hidden="true"
                    class="v-icon v-icon--right material-icons theme--dark"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </button>
              <div
                class="v-menu"
              >
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          View / Edit
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
   
  <div
    class="layout align-center"
  >
    <div
      class="flex grow justify-center"
    >
      <div
        class="layout justify-center"
      >
        <ul
          class="v-pagination theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </button>
          </li>
          <li>
            <button
              class="v-pagination__item v-pagination__item--active primary"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </button>
          </li>
        </ul>
      </div>
    </div>
     
    <div
      class="flex shrink"
    >
      <div
        class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
        role="combobox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Results Per Page
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  10
                </div>
                <input
                  aria-label="Results Per Page"
                  aria-readonly="false"
                  autocomplete="on"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            >
              <div
                class="v-menu__content theme--light "
                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
              >
                <div
                  class="v-select-list v-card theme--light"
                >
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      class="primary--text"
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            15
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            30
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            50
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
